--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Santosh Kumar Sao</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-2-75" data-position="25% 25%">
-									<img src="images/photo.jpg" alt="" />
+									<img src="images/santosh.jpg" alt="" />
 								</div>
 							</section>
 
