--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 				/* Then style the iframe to fit in the container div with full height and width */
 				.responsive-iframe {
-				position: absolute;
+				position: relative;
 				top: 0;
 				left: 0;
 				bottom: 0;
