--- a/index.html
+++ b/index.html
@@ -5,63 +5,74 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Santosh Kumar Sao</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Santosh Kumar Sao</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Wrapper -->
-					<div id="wrapper">
+<body class="is-preload">
 
-						<!-- Panel (Banner) -->
-							<section class="panel banner right">
-								<div class="content color0 span-3-75">
-									<h1 class="major">Hello, my name<br />
-									is Santosh Kumar Sao</h1>
-									<p>Residing at <strong>Kalamkar nagar, ward no. 4, salebad, maha - 444805</strong></p>
-									<p>You can reach me at <a href="lorenipsum@gmail.com">lorenipsum@gmail.com</a><br>
-									or call me on +91 86259 49691
-									</p>
-									<ul class="actions">
-										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
-									</ul>
-								</div>
-								<div class="image filtered span-2-75" data-position="25% 25%">
-									<img src="images/santosh.jpg" alt="" />
-								</div>
-							</section>
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
 
-							<section class="panel color4-alt">
-								<div class="intro color4">
-									<h2 class="major">Contact</h2>
-									<p>Kalamkar nagar, ward no. 4, salebad, maha - 444805</p>
-									<p><a href="lorenipsum@gmail.com">lorenipsum@gmail.com</a><br>
-									<p>+91 86259 49691</p>
-								</div>
-							</section>
+		<!-- Wrapper -->
+		<div id="wrapper">
 
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight right" id="first" style="padding: 15px;">
-								<div class="gallery" data-position="top left">
-									<img src="images/Webp.net-compress-image-80.jpg" alt="" />
-								</div>
-							</section>
+			<!-- Panel (Banner) -->
+			<section class="panel banner right">
+				<div class="content color0 span-3-75">
+					<h1 class="major">Hello, my name<br />
+						is Santosh Kumar Sao</h1>
+					<p>Residing at <strong>Chakradhar nagar, Raigarh - 496001</strong></p>
+					<p>You can reach me at <strong><a
+								href="mailto:lorenipsum@gmail.com">lorenipsum@gmail.com</a></strong><br>
+						or call me on <strong>+91 99009 99099</strong>
+					</p>
+					<ul class="actions">
+						<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a>
+						</li>
+					</ul>
+				</div>
+				<div class="image filtered span-2-75" data-position="25% 25%">
+					<img src="images/santosh.jpg" alt="" />
+				</div>
+			</section>
 
-							<section class="panel spotlight right" style="padding: 15px;">
-								<div class="gallery" data-position="top left">
-									<img src="images/image3.jpg" alt="" />
-								</div>
-							</section>
+			<section class="panel color4-alt">
+				<div class="intro color4">
+					<h2 class="major">Contact</h2>
+					<p>Chakradhar nagar, Raigarh - 496001</p>
+					<p><a href="mailto:lorenipsum@gmail.com">lorenipsum@gmail.com</a><br>
+						<p>+91 99009 99099</p>
+						<!-- <form action="assets/Product-Catalogue-India2June20-English-vestige.pdf" method="get"
+							target="_blank">
+							<button class="primary" type="submit">Click here to download PDF</button>
+						</form> -->
+						<a class="button" href="assets/Product-Catalogue-India2June20-English-vestige.pdf" target="_blank">Click here to
+							download PDF</a>
+				</div>
+			</section>
 
-						<!-- Panel -->
-							<!-- <section class="panel color1">
+			<!-- Panel (Spotlight) -->
+			<section class="panel spotlight right" id="first" style="padding: 15px;">
+				<div class="gallery" data-position="top left">
+					<img src="images/Webp.net-compress-image-80.jpg" alt="" />
+				</div>
+			</section>
+
+			<section class="panel spotlight right" style="padding: 15px;">
+				<div class="gallery" data-position="top left">
+					<img src="images/image3.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Panel -->
+			<!-- <section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Amet lorem</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
@@ -78,8 +89,8 @@
 								</div>
 							</section> -->
 
-						<!-- Panel (Spotlight) -->
-							<!-- <section class="panel spotlight large left">
+			<!-- Panel (Spotlight) -->
+			<!-- <section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">Magna amet tempus</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
@@ -89,62 +100,89 @@
 								</div>
 							</section> -->
 
-						<!-- Panel -->
-							<section class="panel spotlight large left">
-									<iframe class="responsive-iframe" 
-									src="https://www.youtube.com/embed/FjrrsHxGXjA">
-									</iframe> 
-							</section>
+			<!-- Panel -->
+			<section class="panel spotlight large left">
+				<iframe class="responsive-iframe" style="padding: 15px;" src="https://www.youtube.com/embed/FjrrsHxGXjA"
+					allowfullscreen>
+				</iframe>
+			</section>
 
-							<section class="panel spotlight large left">
-								<iframe class="responsive-iframe" 
-								src="https://www.youtube.com/embed/bQ4vaWaiy8o">
-								</iframe> 
-							</section>
+			<section class="panel spotlight large left">
+				<iframe class="responsive-iframe" style="padding: 15px;" src="https://www.youtube.com/embed/bQ4vaWaiy8o"
+					allowfullscreen>
+				</iframe>
+			</section>
 
-							<section class="panel spotlight large left">
-								<iframe class="responsive-iframe" 
-								src="https://www.youtube.com/embed/Pc4dqI0W7eo">
-								</iframe> 
-							</section>
+			<section class="panel spotlight large left">
+				<iframe class="responsive-iframe" style="padding: 15px;" src="https://www.youtube.com/embed/Pc4dqI0W7eo"
+					allowfullscreen>
+				</iframe>
+			</section>
 
-						<!-- Panel -->
-							<section class="panel color4-alt">
+			<!-- Panel -->
+			<!-- <section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
 									<p>Kalamkar nagar, ward no. 4, salebad, maha - 444805</p>
 									<p><a href="lorenipsum@gmail.com">lorenipsum@gmail.com</a><br>
 									<p>+91 86259 49691</p>
 								</div>
-							</section>
+							</section> -->
+			<section class="panel spotlight large left">
+					<!-- <div class="gmap_canvas"> -->
+						<iframe class="responsive-iframe"
+							src="https://maps.google.com/maps?q=496001&t=&z=11&ie=UTF8&iwloc=&output=embed"
+							frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+					<!-- </div> -->
+					<style>
+						.mapouter {
+							position: relative;
+							text-align: right;
+							height: 500px;
+							width: 600px;
+						}
 
-					</div>
+						.gmap_canvas {
+							overflow: hidden;
+							background: none !important;
+							height: 500px;
+							width: 600px;
+						}
+					</style>
+			</section>
+			<!-- <section>
 
-			</div>
+				<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=salebad&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://torrent9-fr.com">has torrent9 been blocked</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+			</section> -->
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
-			<style>
-				.container {
-				position: relative;
-				overflow: hidden;
-				width: 100%;
-				padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-				}
+	</div>
 
-				/* Then style the iframe to fit in the container div with full height and width */
-				.responsive-iframe {
-				position: relative;
-				top: 0;
-				left: 0;
-				bottom: 0;
-				right: 0;
-				width: 100%;
-				height: 100%;
-				}
-			</style>
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/main.js"></script>
+	<style>
+		.container {
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+			padding-top: 56.25%;
+			/* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+		}
+
+		/* Then style the iframe to fit in the container div with full height and width */
+		.responsive-iframe {
+			position: relative;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+		}
+	</style>
+</body>
+
 </html>
