--- a/index.html
+++ b/index.html
@@ -59,15 +59,19 @@
 			</section>
 
 			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight right" id="first" style="padding: 15px;">
-				<div class="gallery" data-position="top left">
-					<img src="images/Webp.net-compress-image-80.jpg" alt="" />
+			<section class="panel" id="first" style="padding: 15px;">
+				<div class="gallery">
+					<!-- <img src="images/Webp.net-compress-image-80.jpg" alt="" /> -->
+					<a href="images/Webp.net-compress-image-80.jpg" class="image filtered span-2" data-position="top">
+						<img src="images/Webp.net-compress-image-80.jpg" alt="" style="object-fit:fill"/></a>
 				</div>
 			</section>
 
-			<section class="panel spotlight right" style="padding: 15px;">
-				<div class="gallery" data-position="top left">
-					<img src="images/image3.jpg" alt="" />
+			<section class="panel" style="padding: 15px;">
+				<div class="gallery">
+					<!-- <img src="images/image3.jpg" alt="" /> -->
+					<a href="images/image3.jpg" class="image span-3" data-position="top">
+						<img src="images/image3.jpg" alt="" style="object-fit:fill"/></a>
 				</div>
 			</section>
 
@@ -182,6 +186,7 @@
 			width: 100%;
 			height: 100%;
 		}
+
 	</style>
 </body>
 
