--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 			<!-- Panel (Banner) -->
 			<section class="panel banner right">
 				<div class="content color0 span-3-75">
-					<h1 class="major">Hello, my name<br />
-						is Santosh Kumar Sao</h1>
+					<h1 class="major">Santosh Kumar Sao</h1>
 					<p>Residing at <strong>Chakradhar nagar, Raigarh - 496001</strong></p>
 					<p>You can reach me at <strong><a
 								href="mailto:lorenipsum@gmail.com">lorenipsum@gmail.com</a></strong><br>
